--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zigavidmar.github.io/book-a-barber",
+  "homepage": "https://zigavidmar.github.io/book-a-barber",
   "name": "ineor-assignment",
   "version": "0.1.0",
   "private": true,
